OpenRewriteによるSpringBoot3.3バージョンアップ